--- a/Oladimeji.html
+++ b/Oladimeji.html
@@ -5,7 +5,7 @@
     <title>Resume</title>
     </head>
     <body>
-        <img href="https://res.cloudinary.com/ovoladimeji/image/upload/v1566635112/mine/IMG_0098_xiw3av.jpg" alt="My Image">
+        <img src="https://res.cloudinary.com/ovoladimeji/image/upload/v1566635112/mine/IMG_0098_xiw3av.jpg" alt="My Image">
         <!--This is a comment-->
         <h1>OLADIMEJI OLARINDE</h1>
         <h2><em>Graphic/UI/UX Designer, Elearning Developer</em></h2>
